--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -116,7 +116,7 @@
 
 .chart-transaction {
   display: grid;
-  grid-template-columns: 850px;
-  grid-template-rows: repeat(2, 300px);
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
   grid-gap: 40px;
 }
