--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -120,3 +120,27 @@
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 40px;
 }
+
+.chart-select {
+  // border-radius: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: rgba(250, 250, 250, 0.4);
+  color: aliceblue;
+  border: none;
+  padding: 5px;
+  margin-left: 50px;
+}
+
+.content-chart-select {
+  background: #7F8A96;
+}
+
+.chars-container {
+
+}
+
+.chart-element {
+  margin-right: 5%;
+  margin-left: 5%;
+}
