--- a/app/views/shared/_charts.html.erb
+++ b/app/views/shared/_charts.html.erb
@@ -1,22 +1,24 @@
-<div>
-  <select name="select" id="chart-selector">
-    <option selected value="select-a-chart">Select a chart:</option>
-    <option value="expenses-by-category">expenses-by-category</option>
-    <option value="my-accounts">my-accounts</option>
-    <option value="last-seven-days">last-seven-days</option>
-    <option value="last-month">last-month</option>
+<div class="search-container">
+  <select name="select" id="chart-selector" class="chart-select">
+    <option selected value="select-a-chart" class="content-chart-select">Select a chart:</option>
+    <option value="expenses-by-category" class="content-chart-select">Expenses by Category</option>
+    <option value="my-accounts" class="content-chart-select">My accounts</option>
+    <option value="last-seven-days" class="content-chart-select">Last Seven Days</option>
+    <option value="last-month" class="content-chart-select">Last Month</option>
   </select>
 </div>
 
-<div id="expenses-by-category" style="display: none">
-  <%= pie_chart current_user.transactions.joins(:category).where(category: {category_type: :Expenses}).group(:name).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "ffffff" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "#ffffff" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} }, legend: { textStyle: { color: '#ffffff' } } }  %>
-</div>
-<div id="my-accounts" style="display: none">
-  <%= column_chart current_user.accounts.group(:name).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} } }  %>
-</div>
-<div id="last-seven-days" style="display: none">
-  <%= column_chart current_user.transactions.group_by_day(:date, last: 7).sum(:amount),  library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} } }  %>
-</div>
-<div id="last-month" style="display: none">
-  <%= line_chart current_user.transactions.group(:account_id).group_by_day(:date, last: 30).sum(:amount),  library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} }, legend: { textStyle: { color: '#ffffff' } } }  %>
+<div class="chars-container">
+  <div id="expenses-by-category" style="display: none; width: 100%; height: 100%;">
+    <%= pie_chart current_user.transactions.joins(:category).where(category: {category_type: :Expenses}).group(:name).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "ffffff" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "#ffffff" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} }, legend: { textStyle: { color: '#ffffff' } } }  %>
+  </div>
+  <div id="my-accounts" style="display: none">
+    <%= column_chart current_user.accounts.group(:name).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} } }  %>
+  </div>
+  <div id="last-seven-days" style="display: none">
+    <%= column_chart current_user.transactions.group_by_day(:date, last: 7, format: "%a").sum(:amount),  library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} } }  %>
+  </div>
+  <div id="last-month" style="display: none">
+    <%= line_chart current_user.transactions.group(:account_id).group_by_day(:date, last: 30).sum(:amount), library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} }, legend: { textStyle: { color: '#ffffff' } } }  %>
+  </div>
 </div>
